Fix layout issues due to floats

--- a/app/assets/stylesheets/_mentor_search.scss
+++ b/app/assets/stylesheets/_mentor_search.scss
@@ -46,8 +46,8 @@
 }
 
 .mentor-search__results {
-  flex-grow: 1;
   padding: 0;
+  width: 100%;
 }
 
 .mentor-search__results h2.mentor-search__results-heading { // TODO: Figure out how to make this less specific
@@ -59,42 +59,34 @@
 
 .mentor-search__mentors-wrapper {
   @include clearfix;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .mentor {
-  background-color: white;
-  border-radius: 0.25rem;
-  box-shadow: 0 2px 2px rgba(black, 0.1);
-  float: left;
   margin-bottom: 1rem;
-  padding: 1rem 1rem 1.25rem;
-  position: relative;
-  width: calc(33.3% - (2rem / 3));
-
-  &:not(:nth-child(3n)) {
-    margin-right: 1rem;
-  }
+  padding: 0 0.5rem;
+  width: calc(100% / 3);
 
   @media screen and (max-width: $device-lg) {
-    width: calc(50% - 0.5rem);
-
-    &:not(:nth-child(3n)) {
-      margin-right: 0;
-    }
-
-    &:not(:nth-child(2n)) {
-      margin-right: 1rem;
-    }
+    width: 50%;
   }
 
   @media screen and (max-width: $device-md) {
+    padding: 0;
     width: 100%;
-
-    &:not(:nth-child(3n)),
-    &:not(:nth-child(2n)) {
-      margin-right: 0;
-    }
   }
+}
+
+.mentor__card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 2px rgba(black, 0.1);
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  padding: 1rem 1rem 1.25rem;
+  position: relative;
 }
 
 .mentor__avatar {
@@ -132,8 +124,12 @@
   font-weight: bold;
 }
 
-.mentor__profile-link-btn {
+.mentor__profile-link {
   display: block;
+  margin-top: auto;
+}
+
+.mentor__profile-link-btn {
   font-size: 1.2rem;
   margin-top: 1.25rem;
   padding: 0.5rem;
@@ -169,39 +165,8 @@
 
 .search-filters__form-wrapper {
 
-  .search-filters__location { // TODO: This nesting is getting v ugly. Figure out how to reduce it.
-    border-bottom: 1px solid rgba(black, 0.1);
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-
-    .tt-dropdown-menu {
-      width: 100%;
-    }
-
-    input {
-      font-size: 1.2rem;
-      margin-bottom: 0;
-    }
-
-    label {
-      padding: 0 0 0.25rem;
-    }
-
-    button {
-      margin: 0.5rem 0 0;
-      width: 100%;
-
-      @media screen and (max-width: $device-md) {
-        width: calc(50% - 0.25rem);
-
-        &:last-child {
-          float: right;
-        }
-      }
-    }
-  }
-
   label {
+    @include disable-highlight;
     align-items: center;
     border-bottom: 1px solid rgba(black, 0.1);
     display: flex;
@@ -266,6 +231,38 @@
     padding: 0.5rem;
     text-transform: none;
     width: 100%;
+  }
+}
+
+.search-filters__location {
+  border-bottom: 1px solid rgba(black, 0.1);
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+
+  .tt-dropdown-menu {
+    width: 100%;
+  }
+
+  input {
+    font-size: 1.2rem;
+    margin-bottom: 0;
+  }
+
+  label {
+    padding: 0 0 0.25rem;
+  }
+
+  button {
+    margin: 0.5rem 0 0;
+    width: 100%;
+
+    @media screen and (max-width: $device-md) {
+      width: calc(50% - 0.25rem);
+
+      &:last-child {
+        float: right;
+      }
+    }
   }
 }
 
